--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@iconify/react": "^6.0.0",
     "axios": "^1.11.0",
+    "motion": "^12.23.9",
     "next": "15.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
